# Project-Neuro

./: .replit  LOCAL_SETUP.md  Readme  neuro.html  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Recommended-Pivot-Focus-on-Personal-Assistant-Based-on-your-project-s-core-strengths-persist-1758235822011_1758235822029.txt  Pasted--VITE-v7-1-6-ready-in-522-ms-Local-http-localhost-5000-Network-http-172-1758237330451_1758237330452.txt  Pasted-Access-to-fetch-at-https-8000-ef06-4315-812e-4f8a24e40d06-00-4d9n4n4rocto-worf-replit-dev-api-aut-1758237731290_1758237731290.txt  Pasted-ccess-to-fetch-at-https-8000-ef06-4315-812e-4f8a24e40d06-00-4d9n4n4rocto-worf-replit-dev-api-auth-1758238021765_1758238021767.txt  Pasted-react-dom-client-js-v-477cec4b-17993-Download-the-React-DevTools-for-a-better-development-experience-1758237657041_1758237657043.txt  Pasted-unner-workspace-backend-INFO-Uvicorn-running-on-http-0-0-0-0-8000-Press-CTRL-C-to-quit--1758225212824_1758225212832.txt
backend/: .env.example  auth.py  database.py  main.py  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  FileUpload.tsx  LandingPage.tsx  LoginForm.tsx  MessageReactions.tsx  SharedConversations.tsx  ThemeProvider.tsx  VoiceFeatures.tsx  auth.ts  index.css
